# MediaPlatform

./: CMakeLists.txt  README.md
src/test/: CMakeLists.txt
src/test/ffmpeg/: CMakeLists.txt  main.cpp  rtmp_client.cpp  rtmp_client.h
src/test/live555/: CMakeLists.txt  dynamic_rtsp_server.cc  dynamic_rtsp_server.hh  main.cc
src/test/opencv/: CMakeLists.txt  show_image.cpp
third-parts/: .gitignore
utils/: CMakeLists.txt
utils/log/: CMakeLists.txt
utils/log/include/: util_log.h  util_log_config.h
utils/log/src/: util_log.cc
utils/test/: CMakeLists.txt  log_example.cc
